# RT-X

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  rtx1_example.py  rtx2_example.py  run.py  run_example.py  tests.py
.github/: labeler.yml
.github/workflows/: test.yml  unit-test.yml  unit_test.yml
docs/: cache_title.json  metadata.json  sitemap.xml  tree.html
docs/data/: 0.json  1.json
docs/data/titles/: 0.json
docs/doc/: 0011fcf5-b434-4432-920e-d67beb345eac.json  090d57aa-175b-4dcc-be8e-f8bf3d222d51.json  1612d1bb-882c-41d4-b6cd-4147984ef51b.json  42054391-5e3b-4306-b61f-722134af58fa.json  620c5a9c-1aaa-4e18-b674-c84f1de0e127.json  62303f4b-d7f3-4b45-b6b6-edb8ed78e1ed.json  79580008-a0d2-417c-858f-9906f4e3e79e.json  7bd62eca-ade5-451d-b36b-a61c3bb3a9b7.json  9cd84729-a66d-4dd2-9ac3-0b601b578ff1.json  ae2d5887-8f38-4704-a9a0-0696d66add2e.json  b8ae1c49-6319-43c5-a904-18d794d034ec.json  bada2261-3ca0-4ac6-bd06-ccae1e365e68.json  cbea409b-4fa4-4844-b7b0-3c0405a696c9.json  cc7ac473-8384-45f8-9082-b6e048952854.json  d6c1a219-8239-4221-823f-ff0149fc958a.json  e083de0f-8e1d-4794-8520-6344017f1879.json
docs/src/: README.md  efficient_net_example.py  tests.py
docs/src/rtx/: __init__.py  data_util.py  rtx1.py
examples/: rtx1_example.py  rtx1_pretrained_example.py  rtx1_train_example.py  rtx2_example.py  train_example.py
rtx/: __init__.py  action_tokenization.py  data_util.py  efficient_net.py  film.py  rtx1.py  rtx2.py
rtx/data/: dataset.py  registry.py  util.py
tests/: test_data_utils.py  test_rtx1.py  tests.py
