[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rtx-torch"
version = "0.1.0"
description = "rtx - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/rt-x"
documentation = "https://github.com/kyegomez/rt-x"  # Replace if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/rtx"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]
packages = [
    { include = "rtx" },
    { include = "rtx/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.9,<3.12"
torch = "*"
einops = "*"
efficientnet_pytorch = "*"
zetascale = "0.8.3"
torchvision = "^0.16.2"
classifier_free_guidance_pytorch = "*"
ray = "^2.8.1"
gin-config = "^0.5.0"
gymnasium = "^0.29.1"
dm-tree = "^0.1.8"
scikit-image = "^0.22.0"
lz4 = "^4.3.2"
torch-tb-profiler = "^0.4.3"
protobuf =  ">=3.19.6,<4.24"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.15.1"
olefile = "^0.47"

[tool.poetry.dev-dependencies]
# Add development dependencies here
