[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rtx-torch"
version = "0.1.3"
description = "rtx - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/rt-x"
documentation = "https://github.com/kyegomez/rt-x"  # Replace if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/rtx"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]
packages = [
    { include = "rtx" },
    { include = "rtx/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.9,<3.12"
torch = "*"
torchvision = "^0.16.2"
einops = "0.7.0"
efficientnet_pytorch = "0.7.1"
zetascale = "1.2.5"
classifier-free-guidance-pytorch = "0.5.3"
lz4 = "^4.3.2"
torch-tb-profiler = "^0.4.3"
tensorboardX = "^2.6.2.2"
tensorboard = "^2.15.1"
olefile = "^0.47"
